Initial solution, copied over from sandbox mod.

--- a/MoreFontSizes/MoreFontSizes.csproj
+++ b/MoreFontSizes/MoreFontSizes.csproj
@@ -33,6 +33,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Info.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Update="System">
       <Private>False</Private>
     </Reference>
