--- a/MoreFontSizes/MoreFontSizes.csproj
+++ b/MoreFontSizes/MoreFontSizes.csproj
@@ -3,6 +3,15 @@
   <PropertyGroup>
 	  <LangVersion>latest</LangVersion>
 	  <TargetFramework>net472</TargetFramework>
+	  <BaseOutputPath></BaseOutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>portable</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>portable</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -90,6 +99,10 @@
     <Reference Update="System.Xml.Linq">
       <Private>False</Private>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Build\" />
   </ItemGroup>
 
 </Project>
